# MonteBoxFinder

./: LICENSE  README.md
CuboidDetection/: CMakeLists.txt  README.md  install.py  main.cpp  value_color.h
CuboidDetection/include/: CMakeLists.txt  cuboids.h  cxxopts.hpp  pointclouds.h
CuboidDetection/src/: CMakeLists.txt  cuboids.cpp  pointclouds.cpp
configs/: default.json  default_ransac.json
python/: get_iterations_per_scene.py  run.py  run_cuboid_detector.py  run_symlink_maker.py
python/lib/: box_utils.py  boxes.py  chamfer_distances.py  iou_box3d.py  observer.py  optimizer.py  scoring.py  visualization_utils.py
